syntax = "proto3";

package datum.os.vendormanager.v1;

import "google/api/resource.proto";
import "google/api/field_behavior.proto";
import "google/api/field_info.proto";
import "google/protobuf/timestamp.proto";

message Vendor {
  option (google.api.resource) = {
    type: "api.datum.net/Vendor"
    pattern: "vendors/{vendor}"
    style: DECLARATIVE_FRIENDLY
    singular: "Vendor"
    plural: "Vendors"
  };

  // The resource name of this Vendor.
  string name = 1 [
    (google.api.field_behavior) = IDENTIFIER,
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The resource ID of this Vendor within its parent resource.
  string vendor_id = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Server assigned unique identifier for the Vendor. The value
  // is a UUID4 string and guaranteed to remain unchanged until the resource is
  // deleted.
  string uid = 3 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (google.api.field_info).format = UUID4
  ];

  // Human-readable display name of this Vendor that you can modify.
  // The maximum length is 63 characters.
  string display_name = 4 [(google.api.field_behavior) = OPTIONAL];

  // Annotations is an unstructured key-value map stored with a Vendor that
  // may be set by external tools to store and retrieve arbitrary metadata.
  // They are not queryable and should be preserved when modifying objects.
  map<string, string> annotations = 5 [(google.api.field_behavior) = OPTIONAL];

  // Labels is an unstructured key-value map stored with a Vendor that
  // may be set by external tools to enable platform features which identify
  // Vendors via label selections.
  map<string, string> labels = 6 [(google.api.field_behavior) = OPTIONAL];

  // Output only. The time when the Vendor is created.
  google.protobuf.Timestamp create_time = 7
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. The last time that the Vendor is updated.
  google.protobuf.Timestamp update_time = 8
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. For a deleted resource, the deletion time. It is only
  // populated as a response to a Delete request.
  google.protobuf.Timestamp delete_time = 9
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. If set, there are currently changes in flight to the Vendor.
  bool reconciling = 10 [(google.api.field_behavior) = OUTPUT_ONLY];

  // This checksum is computed by the server based on the value of
  // other fields, and might be sent on update requests to ensure the client has
  // an up-to-date value before proceeding.
  string etag = 11 [(google.api.field_behavior) = OUTPUT_ONLY];

  VendorSpec spec = 12 [(google.api.field_behavior) = REQUIRED];
}

message VendorSpec {
    
}
